# aws-util

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  config.rs  ec2.rs  interactive.rs  main.rs  schedule.rs  signal.rs  spinner.rs
src/aws/: aws_command.rs  client.rs  instance.rs  mod.rs
