[package]
name = "aws-list"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.9.0", features = ["credentials-login"] }
aws-sdk-ec2 = "1"
tokio = { version = "1.52.3", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
ctrlc = "3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
